--- a/src/admin/index.html
+++ b/src/admin/index.html
@@ -21,7 +21,7 @@
 
 <body>
 	<nav class="navbar navbar-expand-sm bg-dark navbar-dark" role="navigation">
-		<a class="navbar-brand p-0 mx-2" href="/hoadb"><img class="m-0 p-0" id="header-image" alt="logo photo" src="images/logo-photo.jpg"></a>
+		<a class="navbar-brand p-0 mx-2" href="/admin"><img class="m-0 p-0" id="header-image" alt="Brand logo photo" src="https://grhawebstorage.blob.core.windows.net/images/logo-photo.jpg"></a>
 		<a class="navbar-brand d-lg-none" data-bs-toggle="modal" href="#aboutModal">GRHA Admin</a>
 		<a class="navbar-brand d-none d-lg-block" data-bs-toggle="modal" href="#aboutModal">GRHA Admin v1.0</a>
 		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
@@ -30,19 +30,34 @@
 		<!-- Navbar links -->
 		<div class="collapse navbar-collapse justify-content-end mx-2" id="collapsibleNavbar">
 			<ul class="nav navbar-nav">
-                <li class="nav-item"><a class="nav-link active" href="#SearchPage" data-bs-toggle="tab"><i class="fa fa-search fa-lg"></i> Search</a></li>
-                <li class="nav-item"><a class="nav-link" href="#DetailPage" data-bs-toggle="tab"><i class="fa fa-list" fa-lg></i> Detail</a></li>
-                <li class="nav-item"><a class="nav-link" href="#ConfigPage" data-bs-toggle="tab"><i class="fa fa-cog fa-lg"></i> Config</a></li>
+				<li class="nav-item"><a class="nav-link active" data-bs-toggle="tab" href="#HomePage" >
+					<i class="fa fa-home"></i> Home</a></li>
+				<li class="nav-item"><a class="nav-link" data-bs-toggle="tab" href="#DuesPage" role="tab" id="DuesPageNavLink">
+					<i class="fa fa-dollar"></i> Dues</a></li>
 			</ul>
 		</div>
 	</nav>
-
-    <div class="container-fluid">
+	
+	<div class="container-fluid">
 	<div class="tab-content">
-		<div class="tab-pane show active" role="tabpanel" id="SearchPage">
+		<div class="tab-pane show active" role="tabpanel" id="HomePage">
 			<div class="row">
-				  <div class="col-sm-3 col-md-3">
-                    <h5>Search</h5>
+				<div class="col-sm-4 col-lg-3">
+					<div id="DisplayWidth"></div>
+					<h4 class="d-none d-sm-block">Home</h4>
+
+					<input type="number" min="1900" max="2099" step="1" value="2016" />
+
+					<div class="input-group mb-3">
+						<input type="date" class="form-control shadow-none" id="year-picker">
+					  </div>
+					  
+
+
+				</div><!-- End of col 1 -->
+	
+				<div class="col-sm-4 col-lg-6">
+					<h5>Search</h5>
 					<form>
                     	<input type="text" class="form-control form-control-sm m-1 shadow-none" name="searchStr" id="searchStr" placeholder="Enter value to search">
                     	<button id="SearchButton" type="button" class="btn btn-primary mt-2 mb-2">
@@ -64,102 +79,37 @@
 						-->
                     </form>
 
-				  </div>
-				  <div class="col-sm-9 col-md-9">
+				</div> <!-- End of col 2 -->
+	
+				<div class="col-sm-4 col-lg-3">
+
                 	<h5>Properties</h5>
 					<div id="SearchMessageDisplay" class="m-2"></div>
 		            <table class="table table-striped table-sm">
 		            	<tbody id="PropertyListDisplayTbody">
 		               	</tbody>
 		           	</table>
+
+				</div><!-- End of col 3 -->
+	
+			</div><!-- end of row -->
+		</div><!-- end of Home tab -->
+	</div>	
+
+
+
+    <div class="container-fluid">
+	<div class="tab-content">
+		<div class="tab-pane show active" role="tabpanel" id="SearchPage">
+			<div class="row">
+				  <div class="col-sm-3 col-md-3">
+
+				  </div>
+				  <div class="col-sm-9 col-md-9">
 				  </div>
 			</div><!-- row -->
 	    </div><!-- end of Search tab -->
 
-	    <div class="tab-pane" role="tabpanel" id="DetailPage">
-			<div class="row">
-				<div class="col-sm-5 col-md-4">
-					<div class="row">
-
-				  		<div class="col-xs-5 col-sm-5">
-			             	<h5>Detail</h5>
-							<div id="DetailMessageDisplay" class="m-2"></div>
-							<a id="MCTreasLink" href="" class="btn btn-sm btn-primary me-1 mb-1 float-left d-none d-md-block" role="button" target="_blank">
-								County<br>Treasurer
-							</a>
-							<a id="MCAuditorLink" href="" class="btn btn-sm btn-primary me-1 mb-1 float-left d-none d-md-block" role="button" target="_blank">
-								County<br>Property
-							</a>
-							<a id="DuesStatementButton" data-parcelId="" data-ownerId="" href="" class="btn btn-sm btn-success mr-1 mb-1 float-left" role="button">
-								Dues Statement
-							</a>
-							<a id="NewOwnerButton" data-parcelId="" data-ownerId="" href="" class="btn btn-sm btn-warning mr-1 mb-1 float-left" role="button">
-								New Owner
-							</a>
-							<a id="CommunicationsButton" data-parcelId="" data-ownerId="" href="" class="btn btn-sm btn-info mr-1 mb-1 float-left" role="button">
-								Communications
-							</a>
-							<!--
-		                  	<div id="AddAssessment">
-							</div>
-							-->
-		            	</div>
-
-    					<div class="col-xs-7 col-sm-7">
-	                		<h5 class="mt-2">Property Detail</h5>
-
-	                		<table class="table table-sm table-borderless">
-								<tbody>
-									<tr class="small"><th>Parcel Id:</th><td id="Parcel_ID"></td></tr>
-									<tr class="small"><th>Lot No:</th><td id="LotNo"></td></tr>
-									<tr class="small"><th class="d-none d-md-table-cell">Street No: </th><td id="Property_Street_No" class="d-none d-md-table-cell"></td></tr>
-									<tr class="small"><th class="d-none d-md-table-cell">Street Name: </th><td id="Property_Street_Name" class="d-none d-md-table-cell"></td></tr>
-									<tr class="small"><th class="d-none d-md-table-cell">City: </th><td id="Property_City" class="d-none d-md-table-cell"></td></tr>
-									<tr class="small"><th class="d-none d-md-table-cell">State: </th><td id="Property_State" class="d-none d-md-table-cell"></td></tr>
-									<tr class="small"><th class="d-none d-md-table-cell">Zip Code: </th><td id="Property_Zip" class="d-none d-md-table-cell"></td></tr>
-									<tr class="small"><th>Total Due: </th><td id="TotalDue"></td></tr>
-									<tr class="small"><th class="d-none d-md-table-cell">Rental: </th><td class="d-none d-md-table-cell">
-										<input id="Rental" type="checkbox" class="form-check-input shadow-none">
-									</td></tr>
-									<tr class="small"><th class="d-none d-md-table-cell">Managed: </th><td class="d-none d-md-table-cell">
-										<input id="Managed" type="checkbox" class="form-check-input shadow-none">
-									</td></tr>
-									<tr class="small"><th class="d-none d-md-table-cell">Foreclosure: </th><td class="d-none d-md-table-cell">
-										<input id="Foreclosure" type="checkbox" class="form-check-input shadow-none">
-									</td></tr>
-									<tr class="small"><th class="d-none d-md-table-cell">Bankruptcy: </th><td class="d-none d-md-table-cell">
-										<input id="Bankruptcy" type="checkbox" class="form-check-input shadow-none">
-									</td></tr>
-									<tr  class="small"><th>Use Email: </th><td>
-										<input id="UseEmail" class="form-check-input shadow-none" type="checkbox">
-									</td></tr>
-									<tr  class="small"><th>Comments: </th><td>
-										<textarea id="Comments" class="form-control shadow-none" rows="2"></textarea>
-									</td></tr>
-	                  			</tbody>
-	                		</table>
-							<button id="PropertyUpdateButton" type="button" class="btn btn-success">
-								<i class="fa fa-floppy-o me-1"></i> Save
-							</button>
-						</div>
-
-		        	</div><!-- row -->
-				</div>
-
-				  <div class="col-sm-7 col-md-8">
-				  		<h5 class="mt-2">Owners</h5>
-				        <table class="table table-striped">
-				            <tbody id="PropertyOwnersTbody">
-				            </tbody>
-				        </table>
-				    	<h5 class="mt-2">Assessments</h5>
-				        <table class="table table-striped table-sm">
-				            <tbody id="PropertyAssessmentsTbody">
-				            </tbody>
-				        </table>
-				  </div>
-			</div><!-- row -->
-		</div><!-- end of Detail -->
 
 	    <div class="tab-pane" role="tabpanel" id="ConfigPage">
 			<h4>Config</h4>
