--- a/src/admin/index.html
+++ b/src/admin/index.html
@@ -4,26 +4,24 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>HOA db</title>
-	<meta name="keywords" 		content="homewowners association database hoa db" />
-	<meta name="description"	content="This is the Homeowners Association database" />
+    <title>GRHA Admin</title>
+	<meta name="keywords" 		content="homewowners association admin" />
+	<meta name="description"	content="This is the Homeowners Association admin page" />
 	<meta name="Author" 		content="John J Kauflin"/>
     <!-- Place favicon.ico in the root directory -->
     <link rel="icon" href="favicon.ico">
-
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
 		integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 	<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
 		integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous" />
-
     <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
 	<nav class="navbar navbar-expand-sm bg-dark navbar-dark" role="navigation">
 		<a class="navbar-brand p-0 mx-2" href="/admin"><img class="m-0 p-0" id="header-image" alt="Brand logo photo" src="https://grhawebstorage.blob.core.windows.net/images/logo-photo.jpg"></a>
-		<a class="navbar-brand d-lg-none" data-bs-toggle="modal" href="#aboutModal">GRHA Admin</a>
-		<a class="navbar-brand d-none d-lg-block" data-bs-toggle="modal" href="#aboutModal">GRHA Admin v1.0</a>
+		<a class="navbar-brand d-lg-none" href="/admin">GRHA Admin</a>
+		<a class="navbar-brand d-none d-lg-block" href="/admin">GRHA Admin v1.0</a>
 		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
 			<span class="navbar-toggler-icon"></span>
 		</button>
@@ -32,8 +30,8 @@
 			<ul class="nav navbar-nav">
 				<li class="nav-item"><a class="nav-link active" data-bs-toggle="tab" href="#HomePage" >
 					<i class="fa fa-home"></i> Home</a></li>
-				<li class="nav-item"><a class="nav-link" data-bs-toggle="tab" href="#DuesPage" role="tab" id="DuesPageNavLink">
-					<i class="fa fa-dollar"></i> Dues</a></li>
+				<li class="nav-item"><a class="nav-link" data-bs-toggle="tab" href="#BoardPage" role="tab">
+					<i class="fa fa-group"></i> Board</a></li>
 			</ul>
 		</div>
 	</nav>
@@ -94,38 +92,102 @@
 	
 			</div><!-- end of row -->
 		</div><!-- end of Home tab -->
-	</div>	
 
-
-
-    <div class="container-fluid">
-	<div class="tab-content">
-		<div class="tab-pane show active" role="tabpanel" id="SearchPage">
+		<div class="tab-pane" role="tabpanel" id="BoardPage">
+			<h5 class="mt-3">Board of Trustees</h5>
 			<div class="row">
-				  <div class="col-sm-3 col-md-3">
+				<div class="col-sm-3 col-md-3">
 
-				  </div>
-				  <div class="col-sm-9 col-md-9">
-				  </div>
+					<div class="form-floating m-1">
+						<input id="targetTemperature" type="number" class="form-control shadow-none">
+						<label for="targetTemperature">Target Temp</label>
+					</div>
+					<div class="form-floating m-1">
+						<input id="currTemperature" type="number" class="form-control shadow-none" disabled>
+						<label for="currTemperature">Curr Temp</label>
+					</div>
+		
+					<button id="UpdateButton" type="button" class="btn btn-primary m-2">Update</button>
+
+				</div>
+				<div class="col-sm-9 col-md-9">
+					<div class="row">
+						<div class="col-md-4">
+							<div class="card bg-light mb-2">
+								<div class="card-body Trustee">
+								</div>
+							</div>
+						</div>
+						<div class="col-md-4">
+							<div class="card bg-light mb-2">
+								<div class="card-body Trustee">
+								</div>
+							</div>
+						</div>
+						<div class="col-md-4">
+							<div class="card bg-light mb-2">
+								<div class="card-body Trustee">
+								</div>
+							</div>
+						</div>
+					</div>
+			
+					<div class="row">
+						<div class="col-md-4">
+							<div class="card bg-light mb-2">
+								<div class="card-body Trustee">
+								</div>
+							</div>
+						</div>
+						<div class="col-md-4">
+							<div class="card bg-light mb-2">
+								<div class="card-body Trustee">
+								</div>
+							</div>
+						</div>
+						<div class="col-md-4">
+							<div class="card bg-light mb-2">
+								<div class="card-body Trustee">
+								</div>
+							</div>
+						</div>
+					</div>
+			
+					<div class="row">
+						<div class="col-md-4">
+							<div class="card bg-light mb-2">
+								<div class="card-body Trustee">
+								</div>
+							</div>
+						</div>
+						<div class="col-md-4">
+							<div class="card bg-light mb-2">
+								<div class="card-body Trustee">
+								</div>
+							</div>
+						</div>
+						<div class="col-md-4">
+							<div class="card bg-light mb-2">
+								<div class="card-body Trustee">
+								</div>
+							</div>
+						</div>
+					</div>
+			
+					<div class="row">
+						<div class="col-md-4">
+							<div class="card bg-light mb-2">
+								<div class="card-body Trustee">
+								</div>
+							</div>
+						</div>
+					</div>
+			
+				</div>
 			</div><!-- row -->
-	    </div><!-- end of Search tab -->
+		</div><!-- end of Board tab -->
 
-
-	    <div class="tab-pane" role="tabpanel" id="ConfigPage">
-			<h4>Config</h4>
-            <a data-ConfigName="NEW-VALUE" href="#" class="btn btn-sm btn-primary NewConfig" role="button">New Config Value</a>
-		    <table id="ConfigListDisplay" class="table table-striped table-sm mt-2">
-		    	<tbody>
-		    	</tbody>
-		    </table>
-	 	</div><!-- end of Config -->
-
-	</div><!-- end of main tab content -->
-
-		<!--
-		<div id="MessageDisplay" class="m-2"></div>
-		-->
-
+	</div><!-- end of tab-content -->
     </div><!-- end of main container -->
 
 
