--- a/src/admin/index.html
+++ b/src/admin/index.html
@@ -44,25 +44,32 @@
 					<div id="DisplayWidth"></div>
 					<h4 class="d-none d-sm-block">Home</h4>
 
+					<!--
 					<input type="number" min="1900" max="2099" step="1" value="2016" />
 
 					<div class="input-group mb-3">
 						<input type="date" class="form-control shadow-none" id="year-picker">
 					  </div>
+					-->
 					  
+					<form class="needs-validation" novalidate>
+					  </form>
+				  
 
 
 				</div><!-- End of col 1 -->
 	
 				<div class="col-sm-4 col-lg-6">
 					<h5>Search</h5>
+
+
+						<!--
 					<form>
                     	<input type="text" class="form-control form-control-sm m-1 shadow-none" name="searchStr" id="searchStr" placeholder="Enter value to search">
                     	<button id="SearchButton" type="button" class="btn btn-primary mt-2 mb-2">
 							<i class="fa fa-search me-1"></i> Search
 						</button>
 
-						<!--
                     	<button id="AdvancedOptionsButton" type="button" class="btn btn-info mt-2 ml-2 mb-2" data-bs-toggle="collapse" data-bs-target="#AdvancedSearchOptions">Advanced Options</button>
 						<div id="AdvancedSearchOptions" class="collapse">
 	                    	<div class="form-group">
@@ -74,19 +81,21 @@
 	                    		<input type="text" name="altAddress"    id="altAddress"	placeholder="Alternate Address" class="form-control form-control-sm mb-1 resetval">
                             </div>
                         </div>
-						-->
                     </form>
+						-->
 
 				</div> <!-- End of col 2 -->
 	
 				<div class="col-sm-4 col-lg-3">
 
                 	<h5>Properties</h5>
+					<!--
 					<div id="SearchMessageDisplay" class="m-2"></div>
 		            <table class="table table-striped table-sm">
 		            	<tbody id="PropertyListDisplayTbody">
 		               	</tbody>
 		           	</table>
+					-->
 
 				</div><!-- End of col 3 -->
 	
@@ -95,6 +104,57 @@
 
 		<div class="tab-pane" role="tabpanel" id="BoardPage">
 			<h5 class="mt-3">Board of Trustees - Maintenance</h5>
+
+			<form id="UpdateTrusteeForm" class="needs-validation" novalidate>
+				<div class="mb-2">
+					<label for="email" class="form-label">Email address</label>
+					<input type="email" class="form-control" id="email" required>
+					<div class="valid-feedback">
+					  Valid
+					</div>
+					<div class="invalid-feedback">
+					  Please provide a valid email
+					</div>
+				  </div>
+
+				  <div class="mb-2">
+					  <label for="Name2" class="form-label">Name</label>
+					  <input type="text" class="form-control" id="Name2" maxlength="4" required>
+					  <div class="valid-feedback">
+						Valid
+					  </div>
+					  <div class="invalid-feedback">
+						Name must be entered and be 4 chars or less
+					  </div>
+					</div>
+
+				  <div class="mb-2">
+					<label for="password" class="form-label">Password</label>
+					<input type="password" class="form-control" id="password" minlength="6" required>
+					<div class="valid-feedback">
+					  Valid
+					</div>
+					<div class="invalid-feedback">
+					  Password must be at least 6 characters long
+					</div>
+				  </div>
+
+				  <div class="mb-2">
+					  <label for="year-picker" class="form-label">Date</label>
+					  <input type="date" class="form-control" id="year-picker">
+					  <div class="valid-feedback">
+						Valid
+					  </div>
+					  <div class="invalid-feedback">
+						Invalid date
+					  </div>
+				  </div>
+
+				  <button type="submit" class="btn btn-primary">Update</button>
+				  <div id="BoardMessageDisplay" class="m-2"></div>
+			  </form>
+
+
 			<div class="row">
 				<div class="col-sm-2 col-md-2">
 
@@ -208,6 +268,8 @@
 			
 				</div>
 			</div><!-- row -->
+
+
 		</div><!-- end of Board tab -->
 
 	</div><!-- end of tab-content -->
